# libcmatrix

./: .gitattributes  .gitignore  .gitmodules  CHANGES  CHANGES~  Dockerfile  Dockerfile-Minuit2  DockerfileOLD  INSTALL  INSTALL.md  INSTALL~  LICENCE  LICENCE~  LICENSE  Makefile  Makefile.bak  Makefile.in  Makefile.in~  Makefile_template  Makefile_template.in  Makefile~  README.md  config.status  configure  configure-compiler.ac  configure-compiler.ac~  configure-libraries.ac  configure-libraries.ac.old  configure-libraries.ac.save  configure-libraries.ac~  configure.ac  configure.ac~  configure~
NMR/: 3angle  AsynchronousProp.cc  AsynchronousProp.cc~  HomoPropFD.cc  HomoPropTD.cc  InhomoMAS.cc  InhomoMAS.cc~  InhomoProp.cc  InversionGenerator.cc  InversionGenerator.cc.bakbak  InversionGenerator.cc~  MAS.cc  MAS.cc~  MetaPropagation.cc  MetaPropagation.cc~  NMR.cc  NMR.cc~  PhaseModulatedPropagator.cc  PhaseModulatedPropagator.cc~  Sequence.cc  Sequence.cc~  StaticProp.cc  StaticProp.cc~  basespin_system.cc  basespin_system.cc~  lcm_CommonNMR.cc  nonsecular.cc  nonsecular.cc~  powder.cc  proc.cc  proc.cc~  space_T.cc  space_T.cc~  spin_system.cc  spinhalf_system.cc  spinhalf_system.cc~  superop.cc  tensorop.cc  wigner.cc  wigner.cc~
contrib/: Floquet.cc  Floquet.h  PermutedMatrix.h  PermutedMultiMatrix.h  README  args_iter.h  configure_old.ac  explodesource.cc  oldstuff.cc  praxis.cc  praxis.f90  singletransop.cc  singletransop.h
coredefs/: Chebyshev.cc  Chebyshev.cc~  blocking.cc  blocking.cc~  cmatrix.cc  cmatrix.cc~  cmatrix_MPI.cc  cmatrix_threads.cc  common.cc  common.cc~  common_g.cc  complex.cc  complex.cc~  diagonal.cc  diagonalise.cc  diagonalise.cc~  dlamch.txt  invert.cc  invert.cc~  mixed.cc  power.cc  readmatrix.cc  readmatrix.cc~  realtransforms.cc  realtransforms.cc~  rmatrix.cc  rmatrix.cc~  shared.cc  transforms.cc  writematrix.cc  writematrix.cc~
include/: ATLAS_xover.h  AsynchronousPropagation.h  BaseList.h  BaseList.h~  BaseMetaPropagation.h  BaseMetaPropagation.h~  BasePropagation.h  BlockedMatrix.h  BlockedMatrix.h~  BlockedMatrixTensor.h  CachedAllocator.h  CachedAllocator.h~  CrystalSystem.h  CrystalSystem.h~  DynamicList.h  DynamicList.h~  Euler.h  Euler.h~  Fork_controller.h  Fork_controller.h~  HamiltonianStore.h  Histogram.h  Histogram.h~  HomoProp_shared.h  IndirectList.h  IndirectList.h.bak  IndirectMatrix.h  InhomoProp_shared.h  InversionGenerator.h  Lineshapes.h  Lineshapes.h~  List.h  List.h~  ListList.h  ListList.h~  MAS.h  MAS.h.bak  MAS.h.bak~  MAS.h~  Matrix.h  (+102 more)
local/: CrystalGeneric.cc~  crystal.tex  (+7 more)
(+150 files in other folders)
